--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next-themes": "^0.4.4",
     "nodemailer": "latest",
     "path": "latest",
+    "pnpm": "^10.18.2",
     "razorpay": "^2.9.6",
     "react": "^19",
     "react-day-picker": "^9.0.0",
